--- a/buildspec.yml
+++ b/buildspec.yml
@@ -10,10 +10,10 @@ env:
 
 phases:
   install:
-    runtime-versions:
-      docker: 20
     commands:
-      - echo "Installing dependencies..."
+      - echo "checking dependencies..."
+      - docker --version
+      - docker info || true
   pre_build:
     commands:
       - echo "Logging in to Amazon ECR..."
