--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -2,6 +2,8 @@ services:
   backend:
     restart: always
     image: ${ACCOUNT_ID}.dkr.ecr.${AWS_REGION}.amazonaws.com/${BACKEND_REPOSITORY}:${TAG:-latest}
+    labels:
+      - "com.centurylinklabs.watchtower.enable=false"
     expose:
       - "3000"
     environment:
@@ -32,6 +34,8 @@ services:
   frontend:
     restart: always
     image: ${ACCOUNT_ID}.dkr.ecr.${AWS_REGION}.amazonaws.com/${FRONTEND_REPOSITORY}:${TAG:-latest}
+    labels:
+      - "com.centurylinklabs.watchtower.enable=false"
     expose:
       - "3001"
     environment:
@@ -86,11 +90,13 @@ services:
       - /usr/bin/docker-credential-ecr-login:/usr/bin/docker-credential-ecr-login:ro
       - /home/ubuntu/.docker/config.json:/config.json:ro
       - /root/.docker/config.json:/root/.docker/config.json:ro
-    environment:
-      - WATCHTOWER_CLEANUP=true
-      - WATCHTOWER_POLL_INTERVAL=300
-      - WATCHTOWER_INCLUDE_RESTARTING=true
-    command: --interval 300 backend frontend
+    command:
+      - --interval
+      - "300"
+      - --cleanup
+      - --label-enable
+      - --include-restarting
+      - --run-once=true
     networks:
       - aiblog-network
 
