--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -8,6 +8,10 @@ services:
       - "3000"
     ports:
       - "3000:3000"
+    environment:
+      - NODE_ENV=development
+      - PORT=3000
+      - DATABASE_URL=postgresql://admin:adminpassword@postgres:5432/aiblogdb
     env_file:
       - path: ./backend/.env
         required: true
